# iykra_w4assignment

./: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
app/: app.py  generate_recipe.py
kubernetes/: deployment.yaml  service.yaml
