[tool.poetry]
name = "week-4-assignment"
version = "0.1.0"
description = ""
authors = ["BiyBah <biyan.bahtiar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
marimo = "^0.9.27"
python-dotenv = "^1.0.1"
google-generativeai = "^0.8.3"
flask = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
